Bug 1361894 - ignore STUN/TURN servers with mis-matched link local addr. r=bwc

MozReview-Commit-ID: FMRWMHCROUf

--HG--
extra : rebase_source : 98d3100010c50a21bd48c474aac140e8e1636271