media/mtransport/third_party/nICEr/src/net/transport_addr.c
@@ -436,6 +436,21 @@ int nr_transport_addr_is_link_local(nr_transport_addr *addr)
     return(0);
   }
 
+int nr_transport_addr_check_compatibility(nr_transport_addr *addr1, nr_transport_addr *addr2)
+  {
+    // first make sure we're comparing the same ip versions and protocols
+    if ((addr1->ip_version != addr2->ip_version) ||
+        (addr1->protocol != addr2->protocol)) {
+      return(1);
+    }
+    // now make sure the link local status matches
+    if (nr_transport_addr_is_link_local(addr1) !=
+        nr_transport_addr_is_link_local(addr2)) {
+      return(1);
+    }
+    return(0);
+  }
+
 int nr_transport_addr_is_wildcard(nr_transport_addr *addr)
   {
     switch(addr->ip_version){
